--- a/css/common.css
+++ b/css/common.css
@@ -39,3 +39,15 @@ button {
   border: 2px solid #333;
   border-radius: 5px;
 }
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
